Resolves: tdf#123298 resize before writing to vector

Change-Id: I8fc25d254781b31e4ffafcf4397a95d79e042cd8